jk now fisx grid distortion issue

--- a/src/Components/Devices/Devices.scss
+++ b/src/Components/Devices/Devices.scss
@@ -13,11 +13,11 @@ body {
   background: rgb(236, 232, 232);
   .title {
     width: 60%;
-    height: 20%;
+    height: 10%;
   }
   .search {
     width: 60%;
-    height: 20%;
+    height: 10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,6 +32,9 @@ body {
     .toggle {
       width: 20%;
       height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       .hidden {
         display: none;
       }
@@ -58,7 +61,7 @@ body {
   }
   .grid-enclosure {
     width: 60%;
-    height: 60%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -69,7 +72,7 @@ body {
       height: 100%;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: 13%;
+      grid-auto-rows: 24%;
       grid-column-gap: 20px;
       grid-row-gap: 20px;
       justify-content: center;
